--- a/style.css
+++ b/style.css
@@ -236,14 +236,9 @@ div.video-container[type="four"] {
   border: 3px solid rgb(12, 0, 119);
   box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.1);
 }
-div.video-container[type="four"] img.video {
-  width: 30%;
-  height: 30%;
-  margin: -10px 10px 10px 10px;
-  border: 0px solid rgb(55, 0, 207);
-  border-radius: 15px;
-  display: inline-block;
-  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.1);
+div.video-container[type="four"] a {
+  text-align: center;
+  color: white;
 }
 /* Style the search field */
 form.example input[type="text"] {
